# scrt-contract-sdk-poc

./: Cargo.toml
contract_examples/basic/: Cargo.toml
contract_examples/basic/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: msg.rs  state.rs
scrt-contract-sdk/: Cargo.toml
scrt-contract-sdk/src/: contract.rs  lib.rs
sdk/: Cargo.toml
sdk/core/: Cargo.toml
sdk/core/src/: error.rs  handle.rs  lib.rs  storage.rs
sdk/src/: lib.rs
